feat: Add ChatTabEditingScreen (#861)
* feat: Add ChatTabEditingScreen

* fix: Use screen wrapper

* fix: Use wrapper properly